# oxison

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: auto-merge-clean.yml  ci.yml  claude-review.yml  release.yml
docker/oxfaz-worker/: Dockerfile
docs/: MANUAL.md
docs/superpowers/specs/: 2026-06-15-oxfaz-worker-sandbox-design.md
examples/ideate-standup/: COMPREHENSION.md  PRODUCT.md  README.md  ROADMAP.md  brief.txt
examples/oxison-self/: COMPREHENSION.md  MANUAL.md  PRODUCT.md  README.md  SECURITY-NOTES.md  STACK.md
skills/oxison/: SKILL.md
src/oxison/: __init__.py  branch.py  cli.py  comprehend.py  comprehension_doc.py  config.py  credentials.py  dispatch.py  generate.py  jsonutil.py  manifest.py  mdutil.py  oxipensa.py  oxipensa_gate.py  pipeline.py  preflight.py  prompts.py  providers.py  repomap.py  roadmap_doc.py
src/oxison/engine/: __init__.py  container.py  critic.py  dispatch.py  engconfig.py  gates.py  gitutil.py  integrate.py  invoke.py  loop.py  protected.py  regression.py  roadmap_ingest.py  sandbox.py  skillscope.py  taskstore.py  testdiscover.py  types.py
src/oxison/memory/: __init__.py  capture.py  config.py  inject.py  retrieve.py  salience.py  store.py
src/oxison/sources/: __init__.py  base.py  docs.py  docx.py  ingest.py  ocr.py  pdf.py  pptx.py  recording.py  web.py
tests/: test_branch.py  test_cli_argv_scrub.py  test_cli_auth.py  test_cli_build.py  test_cli_ideate.py  test_cli_ocr_warning.py  test_cli_plan.py  test_cli_sources.py  test_comprehend.py  test_comprehension_doc.py  test_config.py  test_config_greenfield.py  test_credentials.py  test_dispatch.py  test_generate.py  test_jsonutil.py  test_manifest.py  test_oxipensa.py  test_oxipensa_gate.py  test_pipeline.py  test_pipeline_greenfield.py  test_platform_hardening.py  test_preflight.py  test_prompts_extra_context.py  test_prompts_greenfield.py  test_providers.py  test_repomap.py  test_roadmap_doc.py
tests/engine/: test_container.py  test_container_spike.py  test_critic.py  test_dispatch.py  test_dispatch_git.py  test_engconfig.py  test_gates.py  test_gitutil.py  test_integrate_git.py  test_invoke.py  test_loop.py  test_protected.py  test_regression.py  test_roadmap_ingest.py  test_sandbox.py  test_sandbox_spike.py  test_skillscope.py  test_taskstore.py  test_testdiscover.py
tests/memory/: test_capture.py  test_inject.py  test_retrieve.py  test_salience.py  test_store.py  test_wiring.py
tests/sources/: test_base.py  test_docs.py  test_docx.py  test_ingest.py  test_ingest_urls.py  test_ocr.py  test_pdf.py  test_pptx.py  test_readonly_invariant.py  test_recording.py  test_web.py
